--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
         <!--<h3 class="font_charm text_center fspx_18 color_green text_uppercase">Los flamingos</h3> --> 
         <h3 class=" font_charm text_center fspx_18 color_green text_uppercase">6:00 PM</h3>
-        <h3 class="mb_10 font_charm text_center fspx_18 color_green text_uppercase mb_20">Izuatl LT21, Tlatelco, 56353 Chimalhuacán, Méx.</h3>
+        <h3 class="mb_10 font_charm text_center fspx_18 color_green text_uppercase mb_20">Calle de tlatelco esquina de avenida peñon, colonia tlatelco </h3>
         <a class="fspx_20 my_btn no_link color_white px_20 py_10 d_block 
-        wpx_200 m0_a rounded_20 text_center font_bold bg_golden" href="https://maps.app.goo.gl/bkzMENbZEtLsNDWT9" >Mapa</a>
+        wpx_200 m0_a rounded_20 text_center font_bold bg_golden" href="https://maps.app.goo.gl/B5tW8wBXd1rRKeo56" >Mapa</a>
 
 
      
